k8s/base/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service
  namespace: rental
spec:
  type: ClusterIP
  selector:
    app: api
  ports:
    - name: http
      port: 80
      targetPort: 4000
