k8s/base/client-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-service
  namespace: rental
spec:
  type: ClusterIP
  selector:
    app: client
  ports:
    - name: http
      port: 80
      targetPort: 8080
